[tool.poetry]
name = "kinnutils"
version = "0.1.0"
description = ""
authors = ["Ryan Farrell <rfarr@zestbloom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-algorand-sdk = "2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
